se agrego un hr para separar las secciones y se arreglaron los problemas de display

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,19 @@
+:root{
+    --line-1:rgba(235, 234, 243, 0.933);
+}
 .container{
     width: 80%;
     margin: 0 auto;    
     font-family: "Poppins",sans-serif;    
     color: #ffffff;
+justify-content: center;
 }
-
+hr{
+    background-color: #400157;
+    border: 0;
+    opacity: .50;
+    height: 0.2rem;
+    width: 90%;
+    margin-bottom: 3rem;
+    margin: auto;
+}
