--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,32 +1,39 @@
 <div class="container cont__experience">
-<!-- circulos de fondo -->
+    <!-- circulos de fondo -->
     <div class="shape-2"></div>
     <div class="shape-1"></div>
     <section id="experience">
         <div class="row">
-<!-- titulo de seccion -->
+            <!-- titulo de seccion -->
+            <hr class="divider">
             <h2 class="experience__title">experiencia</h2>
         </div>
-<!-- cajas de trabajos -->
+        <!-- cajas de trabajos -->
         <div class="row cont__text">
             <div class="col-lg-12 col-md-12 texto">
                 <ul>
                     <li class="caja">
                         <h3>trabajo 1</h3>
                         <h4>año-año</h4>
-                        <p>Full Stack Web Developer Jr.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum obcaecati omnis asperiores nostrum eveniet voluptatum delectus dolorem mollitia magnam expedita sequi eligendi excepturi veritatis odit, hic sapiente quos! Corrupti, commodi.</p>
+                        <p>Full Stack Web Developer Jr.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Rerum obcaecati omnis asperiores nostrum eveniet voluptatum delectus dolorem mollitia magnam
+                            expedita sequi eligendi excepturi veritatis odit, hic sapiente quos! Corrupti, commodi.</p>
                     </li>
                     <li class="caja">
                         <h3>trabajo 2</h3>
                         <h4>año-año</h4>
-                        <p>ventas retail<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, unde ab repellendus voluptas optio in quae odit atque maiores blanditiis, rem porro magnam pariatur distinctio, voluptates at? Impedit, enim eaque.</p>
+                        <p>ventas retail<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, unde ab
+                            repellendus voluptas optio in quae odit atque maiores blanditiis, rem porro magnam pariatur
+                            distinctio, voluptates at? Impedit, enim eaque.</p>
                     </li>
                     <li class="caja">
                         <h3>trabajo 3</h3>
                         <h4>año-año</h4>
-                        <p>otro trabajo<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nulla sint fugit ullam debitis consequuntur id neque sequi reprehenderit numquam! Vero ab rerum reiciendis sequi soluta rem, nobis consectetur distinctio!</p>
+                        <p>otro trabajo<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nulla sint
+                            fugit ullam debitis consequuntur id neque sequi reprehenderit numquam! Vero ab rerum
+                            reiciendis sequi soluta rem, nobis consectetur distinctio!</p>
                     </li>
-                </ul>                
+                </ul>
             </div>
         </div>
     </section>
