--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -10,6 +10,14 @@ p{
     color: black;
     text-align: center;
 }
+hr{
+    background-color: #400157;
+    border: 0;
+    opacity: .50;
+    height: 0.2rem;
+    width: 50rem;
+    margin-bottom: 3rem;
+}
 /* contenedor principal */
 .container{
     display: flex;
@@ -36,6 +44,7 @@ p{
     grid-row: 1;
     width: 20rem;
     border-radius: 50%;
+    box-shadow: 0 0.2rem 2rem rgba(64, 64, 64, 0.821);
 }
 
 .foto p{
@@ -57,8 +66,8 @@ p{
     height: 280px;
     width: 280px;
     background: linear-gradient(
-        #dfa4ff,
-        #c690ff
+        #e156fa,
+        #ff8cecd1
     );
     border-radius: 50%;
     position: absolute;
