--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,17 @@
 <div class="container">
     <section id="sobre">
         <div class="row">
-<!-- titulo de seccion -->
+            <!-- titulo de seccion -->
+            <hr class="divider">
             <h2 class="cont__sobremi">SOBRE MI</h2>
         </div>
-<!-- foto y descripcion del titulo del curso -->
+        <!-- foto y descripcion del titulo del curso -->
         <div class="cont__text">
             <aside class="col-lg-12 col-md-12 col-sm-12 foto">
                 <img class="fotoperfil" src="../../../assets/perfil-sol-circu2-violeta.png">
                 <p>Full Stack Web Developer Jr.</p>
             </aside>
-<!-- texto sobre la seccion sobre mi -->
+            <!-- texto sobre la seccion sobre mi -->
             <aside class="col-lg-12 col-md-12 col-sm-12 texto">
                 <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
                     participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
@@ -22,7 +23,7 @@
                     perder la perspectiva laboral y las relaciones profesionales.</p>
             </aside>
         </div>
-<!-- circulo de fondo -->
+        <!-- circulo de fondo -->
         <div class="shape-3"></div>
     </section>
 </div>
