--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -5,41 +5,44 @@ h2 {
     text-align: center;
     text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.923);
 }
-
-
 h3 {
     text-transform: uppercase;
     margin: 1rem;
 }
-
 h4 {
     margin: 1rem;
 }
-
 ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     text-align: center;
     gap: 1.5rem;
+    margin: auto;
 }
-
 li {
     list-style: none;
 }
-
 p {
     text-align: center;
     color: black;
 }
+hr{
+    background-color: #400157;
+    border: 0;
+    opacity: .50;
+    height: 0.2rem;
+    width: 50rem;
+    margin-bottom: 3rem;
+}
 /* contenedor principal */
+
 .container {
     margin-top: 15rem;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     font-weight: 500;
     position: relative;
 }
-
 .cont__title {
     padding-bottom: 4rem;
 }
@@ -47,12 +50,6 @@ p {
 .cont__text {
     align-items: center;
 }
-
-#education {
-    padding: 2rem, 0;
-    align-items: center;
-}
-
 .texto {
     margin-bottom: 2rem;
 }
