--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -13,7 +13,9 @@ img{
     background-color: white;
     padding: 2rem;
     border-radius: 2rem;
-    position: relative;
+    position: relative;    
+    border: 0.3rem solid rgba(20, 19, 19, 0.06);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.256);
 }
 
 /* .row{
