--- a/src/app/components/proyects/proyects.component.css
+++ b/src/app/components/proyects/proyects.component.css
@@ -3,13 +3,12 @@ h2{
     font-size: 3rem;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 8rem;
-    margin-top: 1rem;
+    margin-bottom: 6rem;
     text-shadow: 0rem 1rem 5px rgba(96, 96, 96, 0.923);
 }
 p{
     color: black;
-    margin-top: 6rem;
+    margin-top: 2rem;
     text-align: center;
 }
 img{
@@ -17,18 +16,30 @@ img{
     border-radius: 50%;
     border: 0.5rem #ffffff solid;
 }
+hr{
+    background-color: #400157;
+    border: 0;
+    opacity: .50;
+    height: 0.2rem;
+    width: 50rem;
+    margin: auto;
+    margin-bottom: 3rem;
+}
 /* contenedor principal */
 .container {
     font-weight: 500;
-    display:flex;
-    flex-wrap: wrap;
-    margin-top:8rem;
-    margin-bottom: 25rem;
+    margin-top:15rem;
+    margin-bottom: 15rem;
     position: relative;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 /* decoracion de cajas de texto*/
 .caja{
-    padding: 10px 10px;
+    padding: 1rem 1rem;
     background-color: rgba(255,255,255,0.06);
     border: 2px solid rgba(255,255,255,0.06);
     border-radius: 10px;
