--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,17 +3,19 @@
         <div class="row">
             <!-- titulo de seccion -->
             <hr class="divider">
-            <h2 class="cont__sobremi">SOBRE MI</h2>
+            <h2>sobre mi</h2>
         </div>
         <!-- foto y descripcion del titulo del curso -->
-        <div class="cont__text">
-            <aside class="col-lg-12 col-md-12 col-sm-12 foto">
-                <img class="fotoperfil" src="../../../assets/perfil-sol-circu2-violeta.png">
-                <p>Full Stack Web Developer Jr.</p>
-            </aside>
-            <!-- texto sobre la seccion sobre mi -->
-            <aside class="col-lg-12 col-md-12 col-sm-12 texto">
-                <p> Hola! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 caja foto">
+                <img src="../../../assets/perfil-sol-circu2-violeta.png">
+                <h3>{{persona.name}} {{persona.surname}}</h3>
+                <p>Full Stack Web Developer Jr.</p>                
+            </div>
+            <!-- texto descriptivo sobre la seccion sobre mi -->
+            <div class="col-lg-6 col-md-12 col-sm-12 texto">
+
+                <p> Hola!! Soy Soledad, estudiante en primer año en la carrera de Analista en Computación también soy
                     participante de la segunda etapa de la capacitación nacional Argentina Programa.<br>
                     En el ámbito laboral me desenvolví como vendedora en el sector retail con más de 5 años de
                     experiencia en atención al público y 3 años como encargada de la gestión y coordinación de grupos de
@@ -21,9 +23,10 @@
                     Me considero una persona dinámica y adaptable a los diferentes entornos que se me presenten, con una
                     excelente predisposición al trabajo en equipo y a la resolución rápida de problemas complejos sin
                     perder la perspectiva laboral y las relaciones profesionales.</p>
-            </aside>
+            </div>
         </div>
         <!-- circulo de fondo -->
         <div class="shape-3"></div>
+        <div class="shape-4"></div>
     </section>
 </div>
