--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,22 +1,24 @@
 <div class="container">
-    <div class="row">
-        <!-- titulo de seccion -->
-        <hr class="divider">
-        <h2>proyectos</h2>
-
-    </div>
-    <div class="row">
-        <!-- imagenes de los proyectos -->
-        <div class="col-lg-6 col-md-3 col-sm-12">
-            <img src="../../../assets/conejo-lector.jpg" alt="conejo">
+    <section id="proyect">
+        <div class="row">
+            <!-- titulo de seccion -->
+            <hr class="divider">
+            <h2>proyectos</h2>
         </div>
-        <!-- caja con descripcion de proyectos -->
-        <div class="col-lg-6 col-md-9 col-sm-12 caja">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorem consequatur suscipit, eius,
-                distinctio culpa, dicta quam ad animi facilis aliquid odio dolores? Beatae corporis voluptates quaerat
-                ducimus quis ut!</p>
+            <!-- imagenes de los proyectos -->
+        <div class="row">
+            <div class="col-lg-6 col-md-3 col-sm-12">
+                <img src="../../../assets/conejo-lector.jpg" alt="conejo">
+            </div>
+            <!-- caja con descripcion de proyectos -->
+            <div class="col-lg-6 col-md-9 col-sm-12 caja">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorem consequatur suscipit, eius,
+                    distinctio culpa, dicta quam ad animi facilis aliquid odio dolores? Beatae corporis voluptates
+                    quaerat
+                    ducimus quis ut!</p>
+            </div>
         </div>
-    </div>
-    <!-- circulo de fondo -->
-    <div class="shape-3"></div>
+        <!-- circulo de fondo -->
+        <div class="shape-3"></div>
+    </section>
 </div>
