se creo el modulo de security en el back, con sus clases y entidades, no se puede levantar el servidor por error de beans no encontrado entre los paquetes UserService e InterUserRepository

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,14 @@
 :root{
     --line-1:rgba(235, 234, 243, 0.933);
 }
-.container{
+/* router-outlet{
     width: 80%;
     margin: 0 auto;    
     font-family: "Poppins",sans-serif;    
-    color: #ffffff;
-justify-content: center;
-}
-hr{
+    color: #ffffff;    
+    justify-content: center;
+} */
+/* hr{
     background-color: #400157;
     border: 0;
     opacity: .50;
@@ -16,4 +16,4 @@ hr{
     width: 90%;
     margin-bottom: 3rem;
     margin: auto;
-}
+} */
