--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<app-barra-iconos></app-barra-iconos>
-<div class="container">
-  <app-header></app-header>
-  <app-about></app-about>
-  <app-experience></app-experience>
-  <app-education></app-education>
-  <app-skills></app-skills>
-  <app-proyects></app-proyects>
-</div>
-<hr class="divider">
-<app-footer></app-footer>
+<router-outlet></router-outlet>
