--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<app-barra-iconos></app-barra-iconos>
+<div class="container">
+  <app-header></app-header>
+  <app-about></app-about>
+  <app-experience></app-experience>
+  <app-education></app-education>
+  <app-skills></app-skills>
+  <app-proyects></app-proyects>
+</div>
+<hr class="divider">
+<app-footer></app-footer>
