--- a/src/app/components/barra-iconos/barra-iconos.component.html
+++ b/src/app/components/barra-iconos/barra-iconos.component.html
@@ -38,10 +38,7 @@
         </div>
         <div class="col-lg-4 col--4 botones">
             <div class="boto">
-                <a class="btn btn-primary" role="button" aria-disabled="true">login</a>
-            </div>
-            <div>
-                <a class="btn btn-primary" role="button" aria-disabled="true">iniciar sesion</a>
+                <a href="/login" class="btn btn-primary" role="button" aria-disabled="true">login</a>
             </div>
         </div>
     </div>
