se arreglo la parte de componentes del back y la coneccion-volvi a rehacer todo la bd-, pero ahora hay inconvenientes con el fron, no se muestra la pagina-queda a resolver-

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -8,7 +8,7 @@
         <!-- foto y descripcion del titulo del curso -->
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 caja foto">
-                <img src="../../../assets/perfil-sol-circu2-violeta.png">
+                <img {{persona.image}}>
                 <h3>{{persona.name}} {{persona.surname}}</h3>
                 <p>Full Stack Web Developer Jr.</p>                
             </div>
