--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-    <section id="sobre">
+<div id="about" class="container">
         <div class="row">
             <!-- titulo de seccion -->
             <hr class="divider">
@@ -8,9 +7,9 @@
         <!-- foto y descripcion del titulo del curso -->
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 caja foto">
-                <img {{persona.image}}>
-                <h3>{{persona.name}} {{persona.surname}}</h3>
-                <p>Full Stack Web Developer Jr.</p>                
+                <img class="imag  slide-bck-tl" src="{{persona.image}}">
+                <h3 class="color-t">{{persona.name}} {{persona.surname}}</h3>
+                <!-- <p>Full Stack Web Developer Jr.</p>                 -->
             </div>
             <!-- texto descriptivo sobre la seccion sobre mi -->
             <div class="col-lg-6 col-md-12 col-sm-12 texto">
@@ -26,7 +25,4 @@
             </div>
         </div>
         <!-- circulo de fondo -->
-        <div class="shape-3"></div>
-        <div class="shape-4"></div>
-    </section>
 </div>
