--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,8 +1,4 @@
-<div class="container cont__experience">
-    <!-- circulos de fondo -->
-    <div class="shape-2"></div>
-    <div class="shape-1"></div>
-    <section id="experience">
+<div id="experience" class="container cont__experience">
         <div class="row">
             <!-- titulo de seccion -->
             <hr class="divider">
@@ -13,22 +9,18 @@
             <div class="col-lg-12 col-md-12 texto">
                 <ul>
                     <li class="caja">
-                        <h3>trabajo 1</h3>
-                        <h4>año-año</h4>
-                        <p>Full Stack Web Developer Jr.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Rerum obcaecati omnis asperiores nostrum eveniet voluptatum delectus dolorem mollitia magnam
-                            expedita sequi eligendi excepturi veritatis odit, hic sapiente quos! Corrupti, commodi.</p>
+                        <h3 class="color-t">Veterinaria Don Bartolome</h3>
+                        <h4 class="color-t">2010-2011</h4>
+                        <p>Me desempeñe en la atencion al publico en venta de alimento y productos veterinarios.</p>
                     </li>
                     <li class="caja">
-                        <h3>trabajo 2</h3>
-                        <h4>año-año</h4>
-                        <p>ventas retail<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, unde ab
-                            repellendus voluptas optio in quae odit atque maiores blanditiis, rem porro magnam pariatur
-                            distinctio, voluptates at? Impedit, enim eaque.</p>
+                        <h3 class="color-t">fotocopíadora c.e.i</h3>
+                        <h4 class="color-t">2018-actualidad</h4>
+                        <p>Ventas retail.<br>Me desempeño en atencion al publico, cajera yprincipalmente como coordinadora general de la fotocopíadora. Como tal soy la encargada de la organizacion de los grupos de trabajo y de la administracion de los recursos materiales.</p>
                     </li>
                     <li class="caja">
-                        <h3>trabajo 3</h3>
-                        <h4>año-año</h4>
+                        <h3 class="color-t">trabajo 3</h3>
+                        <h4 class="color-t">año-año</h4>
                         <p>otro trabajo<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nulla sint
                             fugit ullam debitis consequuntur id neque sequi reprehenderit numquam! Vero ab rerum
                             reiciendis sequi soluta rem, nobis consectetur distinctio!</p>
@@ -36,5 +28,7 @@
                 </ul>
             </div>
         </div>
-    </section>
+        <!-- circulos de fondo -->
+        <div class="shape-2"></div>
+        <div class="shape-1"></div>
 </div>
