--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,11 +10,11 @@
         </div>
         <div class="col">
             <nav class="nav__bar">
-                <a href="">About</a>
-                <a href="">Experiencia</a>
-                <a href="">Educacion</a>
-                <a href="">Skills</a>
-                <a href="">Proyectos</a>
+                <a href="#about">About</a>
+                <a href="#experience">Experiencia</a>
+                <a href="#education">Educacion</a>
+                <a href="#skills">Skills</a>
+                <a href="#proyect">Proyectos</a>
             </nav>
         </div>   
 
