--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,7 +1,7 @@
 <section class="contenedor">
         <div class="wrapper">
         <div class="container">
-            <h2>HARD SKILLS</h2>
+            <h2 class="color-t">HARD SKILLS</h2>
             <div class="skills">
                 <div class="details">
                     <span>HTML</span>
@@ -63,7 +63,7 @@
 
     <div class="wrapper skills">
         <div class="container">
-            <h2>SOFT SKILLS</h2>
+            <h2 class="color-t">SOFT SKILLS</h2>
             <div class="skills">
                 <div class="details">
                     <span>Trabajo en equipo</span>
