--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,24 +1,23 @@
-<div class="container">
-    <section id="proyect">
-        <div class="row">
-            <!-- titulo de seccion -->
-            <hr class="divider">
-            <h2>proyectos</h2>
-        </div>
-            <!-- imagenes de los proyectos -->
-        <div class="row">
-            <div class="col-lg-6 col-md-3 col-sm-12">
-                <img src="../../../assets/conejo-lector.jpg" alt="conejo">
-            </div>
-            <!-- caja con descripcion de proyectos -->
-            <div class="col-lg-6 col-md-9 col-sm-12 caja">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorem consequatur suscipit, eius,
-                    distinctio culpa, dicta quam ad animi facilis aliquid odio dolores? Beatae corporis voluptates
-                    quaerat
-                    ducimus quis ut!</p>
-            </div>
-        </div>
+<div id="proyect" class="container">
         <!-- circulo de fondo -->
         <div class="shape-3"></div>
-    </section>
+    <!-- titulo de seccion -->
+    <div class="row">
+        <hr class="divider">
+        <h2>proyectos</h2>
+    </div>
+    <!-- imagenes de los proyectos -->
+    <div class="d-flex flex-row mb-2 tarjetas">
+        <!-- caja con descripcion de proyectos -->
+        <div class="p-2 caja">
+            <img src="../../../assets/conejo-lector.jpg" alt="conejo">
+            <h5 class="color-t">titulo</h5>
+            <p>Descripcion del proyecto!</p>
+        </div>
+        <div class="p-2 caja">
+            <img src="../../../assets/proyecto-veterinaria.png" alt="desafio">
+            <h5 class="color-t">titulo</h5>
+            <p>Descripcion del proyecto!</p>
+        </div>
+    </div>
 </div>
