--- a/src/app/components/barra-iconos/barra-iconos.component.html
+++ b/src/app/components/barra-iconos/barra-iconos.component.html
@@ -37,8 +37,11 @@
 <!-- botones para el logueo e inicio de secion -->
         </div>
         <div class="col-lg-4 col--4 botones">
+            <div class="boto1">
+                <button><a href="/login" target="_blank">login</a></button>
+            </div>
             <div class="boto">
-                <a href="/login" class="btn btn-primary" role="button" aria-disabled="true">login</a>
+                <button><a href="#">ingresar</a></button>
             </div>
         </div>
     </div>
