--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,40 +1,35 @@
-<div class="container cont__education">
-    <section id="education">
+<div id="education" class="container cont__education">
         <div class="row">
             <!-- titulo de seccion -->
             <hr class="divider">
             <h2 class="cont__title">educacion</h2>
         </div>
         <!-- seccion de cajas  -->
-        <div class="row cont__text">
-            <div class="col-lg-12 col-md-12 texto">
+        <div class="cont__text">
+            <div>
                 <ul>
                     <li class="caja">
-                        <h3>educacion 1</h3>
-                        <h4>año-año</h4>
-                        <p>Full Stack Web Developer Jr.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Rerum obcaecati omnis asperiores nostrum eveniet voluptatum delectus dolorem mollitia magnam
-                            expedita sequi eligendi excepturi veritatis odit, hic sapiente quos! Corrupti, commodi.</p>
+                        <h3 class="color-t">Colegio Nuestra Señora del Huerto</h3>
+                        <img src="../../../assets/logo-jujuy.png" alt="">
+                        <h4 class="color-t">1997-2010</h4>
+                        <p>Polimodal orientado a Ciencias Naturales</p>
                     </li>
                     <li class="caja">
-                        <h3>teducacion 2</h3>
-                        <h4>año-año</h4>
-                        <p>ventas retail<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, unde ab
-                            repellendus voluptas optio in quae odit atque maiores blanditiis, rem porro magnam pariatur
-                            distinctio, voluptates at? Impedit, enim eaque.</p>
+                        <h3 class="color-t">Universidad Nacional de Rio Cuarto</h3>
+                        <img src="../../../assets/l-unrc.png" alt="">
+                        <h4 class="color-t">2021-actualidad</h4>
+                        <p>Lc. en Analista en Computacion</p>
                     </li>
                     <li class="caja">
-                        <h3>educacion 3</h3>
-                        <h4>año-año</h4>
-                        <p>otro trabajo<br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nulla sint
-                            fugit ullam debitis consequuntur id neque sequi reprehenderit numquam! Vero ab rerum
-                            reiciendis sequi soluta rem, nobis consectetur distinctio!</p>
+                        <h3 class="color-t">Argentina Programa</h3>
+                        <img src="../../../assets/banner-argentina-programa.jpg" alt="">
+                        <h4 class="color-t">2021-2022</h4>
+                        <p>Agrega descripcion del titulo educativo</p>
                     </li>
                 </ul>
             </div>
         </div>
-        <!-- circulos de fondo -->
-        <div class="shape-3"></div>
-        <div class="shape-1"></div>
-    </section>
+    <!-- circulos de fondo -->
+    <div class="shape-3"></div>
+    <div class="shape-1"></div>
 </div>
