--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -1,32 +1,33 @@
 /* globales */
 h2{
-    font-size: 3rem;
+    font-size: 4.5rem;
+    font-weight: 800;
     text-transform: uppercase;
     text-align: center;
-    text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.923);
+    text-shadow: 0rem 1rem 8px rgba(96, 96, 96, 0.163);
+    margin-bottom: 2rem;
+    color: hsl(218, 81%, 75%);
 }
-
 h3{
     text-transform: uppercase;
     margin: 1rem;
 }
-
 h4{
     margin: 1rem;
+    font-size: 1rem;
 }
-
 ul{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     text-align: center;
     gap: 1.5rem;
+    margin: auto;
+    padding: 0;
 }
-
 li{
     list-style: none;
 }
-
 p{
     text-align: center;
     color: black;
@@ -42,28 +43,25 @@ hr{
 /* contenedor principal */
 .container{
     margin-top: 15rem;
-    margin-bottom: 7rem;
-    font-family: "Poppins",sans-serif;
-    color: #ffffff;
+    margin-bottom: 3rem;
     font-weight: 500;
     position: relative;
 }
-
-.experience__title{
-    padding-bottom: 4rem;
+.color-t{
+    color: hsl(0, 0%, 100%);
 }
-
+.experience__title{
+    padding-bottom: 2rem;
+}
 .cont__text{
     align-items: center;
 }
-
 #experiencia{
     padding: 2rem , 0;
     align-items: center;
 }
-
 .row{
-    margin-top: 4rem;
+    margin-top: 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -75,7 +73,7 @@ hr{
     background-color: rgba(255,255,255,0.06);
     border: 2px solid rgba(255,255,255,0.06);
     border-radius: 10px;
-    box-shadow: 0 20px 30px rgba(0,0,0,0.2);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
     backdrop-filter: blur(10px)
 }
 /* circulos de fondo */
@@ -88,8 +86,9 @@ hr{
     );
     border-radius: 50%;
     position: absolute;
-    right: -4rem;
+    right: -2rem;
     bottom: -5rem;
+    z-index: -1;
 }
 .shape-2{
     height: 180px;
@@ -100,9 +99,8 @@ hr{
     );
     border-radius: 50%;
     position: absolute;
-    top: -90px;
     right: 10px;
-    top: 5rem;
-    left: 3rem;
+    top: 10rem;
+    left: 1rem;
     z-index: -1;
 }
