--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,3 @@
-<!-- Section: Design Block -->
 <section class="overflow-hidden">
   
     <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-2">
@@ -28,13 +27,13 @@
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
                       <input type="text" id="form3Example1" class="form-control" />
-                      <label class="form-label" for="form3Example1">First name</label>
+                      <label class="form-label" for="form3Example1">Nombre</label>
                     </div>
                   </div>
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
                       <input type="text" id="form3Example2" class="form-control" />
-                      <label class="form-label" for="form3Example2">Last name</label>
+                      <label class="form-label" for="form3Example2">Apellido</label>
                     </div>
                   </div>
                 </div>
@@ -42,31 +41,21 @@
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                   <input type="email" id="form3Example3" class="form-control" />
-                  <label class="form-label" for="form3Example3">Email address</label>
+                  <label class="form-label" for="form3Example3">Email</label>
                 </div>
   
                 <!-- Password input -->
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4" class="form-control" />
-                  <label class="form-label" for="form3Example4">Password</label>
+                  <label class="form-label" for="form3Example4">Contraseña</label>
                 </div>
-  
-                <!-- Checkbox -->
-                <div class="form-check d-flex justify-content-center mb-4">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                  <label class="form-check-label" for="form2Example33">
-                    Subscribe to our newsletter
-                  </label>
-                </div>
-  
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Sign up
-                </button>
-  
+                  Crear cuenta
+                </button>  
                 <!-- Register buttons -->
                 <div class="text-center">
-                  <p>or sign up with:</p>
+                  <p>Recorda seguime en:</p>
                   <button type="button" class="btn btn-link btn-floating mx-1">
                     <i class="fab fa-facebook-f"></i>
                   </button>
