--- a/src/app/components/progress-bar/progress-bar.component.css
+++ b/src/app/components/progress-bar/progress-bar.component.css
@@ -12,7 +12,9 @@ h2{
     margin: 0 auto;
     justify-content: center;
 }
-
+.color-t{
+    color: hsl(0, 0%, 100%);
+}
 .wrapper{
     width: 40%;
     min-width: 500px;
@@ -78,6 +80,7 @@ h2{
 
 #css-bar{
     animation: css-fill 2s forwards;
+    animation-timing-function: ease-in;
 }
 @keyframes css-fill{
     100%{
