--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,26 +1,25 @@
-<div class="container">
-    <section id="skills">   
-        <div class="row">
-            <hr class="divider">
-            <h2>SKILLS</h2>
+<div id="skills" class="container">
+    <div class="row">
+        <!-- titulo de seccion -->
+        <hr class="divider">
+        <h2>SKILLS</h2>
+    </div>
+    <!-- descripcion general de skills -->
+    <div class="row">
+        <div class="texto">
+            <p> Me considero una persona dinámica y adaptable a los diferentes entornos que se me presenten, con una
+                excelente predisposición al trabajo en equipo y a la resolución rápida de problemas complejos sin
+                perder la perspectiva laboral y las relaciones profesionales.</p>
         </div>
-        <!-- texto descriptivo -->
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-6 texto">
-                <p> Me considero una persona dinámica y adaptable a los diferentes entornos que se me presenten, con una
-                    excelente predisposición al trabajo en equipo y a la resolución rápida de problemas complejos sin
-                    perder la perspectiva laboral y las relaciones profesionales.</p>
-            </div>
+    </div>
+    <!-- tablas con barras animadas -->
+    <div class="row">
+        <div class=" col-lg-12 col-md-12 col-sm-12 progre">
+            <app-progress-bar></app-progress-bar>
         </div>
-        <!-- tablas con barras animadas -->
-        <div class="row">
-            <div class=" col-lg-12 col-md-12 col-sm-12 progre">
-                <app-progress-bar></app-progress-bar>
-            </div>
-        </div>
-        <!-- circulos de fondo -->
-        <div class="shape-3"></div>
-        <div class="shape-2"></div>
-        <div class="shape-1"></div> 
-    </section>
+    </div>
+    <!-- circulos de fondo -->
+    <div class="shape-3"></div>
+    <div class="shape-2"></div>
+    <div class="shape-1"></div>
 </div>
