--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,15 @@
-/* html {
-    font-size: 62.5%;
-} */
+html {
+    font-size: 100%;
+}
 :root{
     --fondo1:linear-gradient(252.34deg, rgba(255, 174, 218, 0.74) -4.03%, rgba(209, 172, 255, 0.762656) 21.45%, rgba(157, 201, 255, 0.79) 80.88%, rgba(107, 208, 255, 0.79) 112.41%);
     --fondo2:linear-gradient(252.34deg, rgba(107, 208, 255, 0.79) -0.39%, rgba(157, 178, 255, 0.79) 32.36%, rgba(209, 172, 255, 0.762656) 90.58%, rgba(255, 174, 218, 0.74) 112.41%);
     --fondo3:linear-gradient(245.27deg, rgba(153, 206, 255, 0.49) 9.13%, rgba(135, 121, 221, 0.49) 28.89%, rgba(206, 146, 243, 0.49) 56.74%, rgba(255, 172, 217, 0.54) 91.96%);
     --fondo4: linear-gradient(245.27deg, rgba(153, 206, 255, 0.79) 9.13%, rgba(121, 131, 221, 0.58) 28.8%, rgba(183, 170, 234, 0.83) 56.74%, rgba(255, 172, 217, 0.74) 91.96%);
 }
-
 body {
     font-size: 16px;
+    font-family: 'Merriweather Sans', sans-serif;
     margin: auto;
     width: 100%;
     max-width: 1280vh;
